...
    <string name="no_description">No Description Available</string>
    <string name="completed">Completed</string>
    <string name="none">None</string>
    <string name="delete">Delete</string>
    <string name="library_name">Library Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="google_login">Google Login</string>
    <string name="no_account_question">Don\'t have an account?</string>
    <string name="sign_up_exclamation">Sign Up!</string>
    <string name="hi">Hi</string>
    <string name="what_wanna_read">What you wanna read today?</string>
    <string name="try_it">TRY IT</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="profile_pic_icon_description">Profile pic</string>
    <string name="edit_icon_description">edit</string>
    <string name="username">Username</string>
    <string name="lib_icon_description">lib</string>
    <string name="arrow_icon_description">arrow</string>
    <string name="close_icon_description">Close</string>
    <string name="add_review">Add review</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_review">Edit review</string>
...
