...
        Button(
            onClick = onLoginClick,
            modifier = Modifier
                .padding(vertical = 16.dp)
                .fillMaxWidth()
                .height(60.dp)
                .testTag("LoginBtn"),
            shape = RoundedCornerShape(8),
            colors = ButtonDefaults.buttonColors(backgroundColor = MaterialTheme.colors.buttonColor)
        ) {
            BooksriverSubtitle(fontSize = 16.sp, color = Color.White, text = stringResource(R.string.login))
        }
        Row(
...
